<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/label_main" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/label_news" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_enroll_master"
            android:title="@string/label_feedback" />
        <item
            android:id="@+id/nav_enroll_master"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/label_enroll_master" />
    </group>

    <item android:title="@string/label_menu_gallery">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/label_gallery" />
        </menu>
    </item>

</menu>
